package com.SWEII.Services.UsersServices;

import com.SWEII.Models.UsersModels.Administrator;

import java.util.List;

public interface IAdministratorServices {

    List<Administrator> listAllAdministrators();
}
