package com.SWEII.Services.UsersServices;

import com.SWEII.Models.UsersModels.NormalUser;

import java.util.List;

public interface INormalUserServices {

    List<NormalUser> listAllNormalUsers();
}
