package com.SWEII.Services.UsersServices;

import com.SWEII.Models.UsersModels.StoreOwner;

import java.util.List;

public interface IStoreOwnerServices {

    List<StoreOwner> listAllStoreOwners();
}
