@startuml

title __USERSSERVICES's Class Diagram__\n

  namespace com.SWEII {
    namespace Services.UsersServices {
      class com.SWEII.Services.UsersServices.AdministratorServices {
          + listAllAdministrators()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      interface com.SWEII.Services.UsersServices.IAdministratorServices {
          {abstract} + listAllAdministrators()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      interface com.SWEII.Services.UsersServices.INormalUserServices {
          {abstract} + listAllNormalUsers()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      interface com.SWEII.Services.UsersServices.IStoreOwnerServices {
          {abstract} + listAllStoreOwners()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      interface com.SWEII.Services.UsersServices.IUserServices {
          {abstract} + findByEmail()
          {abstract} + findByUsername()
          {abstract} + listAllUsers()
          {abstract} + saveUser()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      class com.SWEII.Services.UsersServices.NormalUserServices {
          + listAllNormalUsers()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      class com.SWEII.Services.UsersServices.StoreOwnerServices {
          + listAllStoreOwners()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Services.UsersServices {
      class com.SWEII.Services.UsersServices.UserServices {
          + findByEmail()
          + findByUsername()
          + listAllUsers()
          + saveUser()
      }
    }
  }
  

  com.SWEII.Services.UsersServices.AdministratorServices .up.|> com.SWEII.Services.UsersServices.IAdministratorServices
  com.SWEII.Services.UsersServices.AdministratorServices o-- com.SWEII.Repositories.UsersRepositories.IAdministratorRepository : administratorRepository
  com.SWEII.Services.UsersServices.NormalUserServices .up.|> com.SWEII.Services.UsersServices.INormalUserServices
  com.SWEII.Services.UsersServices.NormalUserServices o-- com.SWEII.Repositories.UsersRepositories.INormalUserRepository : normalUserRepository
  com.SWEII.Services.UsersServices.StoreOwnerServices .up.|> com.SWEII.Services.UsersServices.IStoreOwnerServices
  com.SWEII.Services.UsersServices.StoreOwnerServices o-- com.SWEII.Repositories.UsersRepositories.IStoreOwnerRepository : storeOwnerRepository
  com.SWEII.Services.UsersServices.UserServices .up.|> com.SWEII.Services.UsersServices.IUserServices
  com.SWEII.Services.UsersServices.UserServices o-- com.SWEII.Services.UsersServices.IAdministratorServices : administratorServices
  com.SWEII.Services.UsersServices.UserServices o-- com.SWEII.Services.UsersServices.INormalUserServices : normalUserServices
  com.SWEII.Services.UsersServices.UserServices o-- com.SWEII.Services.UsersServices.IStoreOwnerServices : storeOwnerServices
  com.SWEII.Services.UsersServices.UserServices o-- com.SWEII.Repositories.UsersRepositories.IUserRepository : userRepository


right footer


endfooter

@enduml
